--- a/HOME.HTML
+++ b/HOME.HTML
@@ -20,6 +20,10 @@
     </script>
 </head>
 <body>
+  <div class="flex flex-col sm:flex-row p-4">
+    <div class="w-full sm:w-1/2 bg-red-300 p-4">Left</div>
+    <div class="w-full sm:w-1/2 bg-blue-300 p-4">Right</div>
+  </div>
   <header class="bg-[#292E36] h-[500px] text-white font-josephanslap">
     <div class="w-[1000px] mx-6   ">
       <button class="border border-lime-400 text-white px-4 py-1 text-sm mb-4 md:mb-0 flex justify-around ">Mohamed's design</button>
