--- a/HOME.HTML
+++ b/HOME.HTML
@@ -1,103 +1,141 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mohamed's Personal Website</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        fontFamily: {
-          josephanslap: ["Josefin Slab", "serif"]
-        }
-      }
-    }
-  </script>
-</head>
-<body class="font-josephanslap">
+<!DOCTYPE html>  <html lang="en">  
+<head>  
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>Mohamed's Personal Website</title>  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />  
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">  <link rel="preconnect" href="https://fonts.googleapis.com">  
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">  
+<script src="https://cdn.tailwindcss.com"></script>  
+<script>  
+    tailwind.config ={  
+    theme: {  
+        fontFamily: {  
+        josephanslap: ["Josefin Slab", "serif"]  
+        }  
+    }  
+    }  
+</script>
 
-  <header class="bg-[#292E36] text-white">
-    <div class="max-w-screen-xl mx-auto px-4 py-6">
-      <button class="border border-lime-400 text-white px-4 py-1 text-sm mb-4 md:mb-0">Mohamed's design</button>
+</head>  
+<body  class="bg-[#fff7f3]">  
+  <header class="bg-[#292E36] h-[500px] text-white font-josephanslap">  
+    <div class="w-[1000px] mx-6   ">  
+      <button class="border border-lime-400 text-white px-4 py-1 text-sm mb-4 md:mb-0 flex justify-around ">Mohamed's design</button>  
+    </div>  
+    <nav class="text-bottom">  
+      <ul class="flex space-x-12 mx-60 items-center tracking-tight">  
+        <li><a href="HOME.HTML"class="hover:text-blue-400">Home</a></li>  
+        <li><a href="aboutme.html"class="hover:text-blue-400">About me</a></li>  
+        <li><a href="jus.html"class="hover:text-blue-400">About JUS</a></li>  
+        <li><a href="xaafadeyda.html"class="hover:text-blue-400">About Village</a></li>  
+        <li><a href="contact.html"class="hover:text-blue-400">Contact</a></li>  
+      </ul>  
+      <div class="space-x-3 mb-2 text-right">  
+        <a href="https://www.instagram.com/mohamed.isak___73?igsh=aHNxZWV2NjFveGxl"target="_blank"><i class="fab fa-instagram  hover:text-[#4a90e2]"></i></a>  
+        <a href="https://www.facebook.com/mohamed.isak.5055"target="_blank"><i class="fab fa-facebook hover:text-[#4a90e2]"></i></a>  
+        <a href="https://x.com/mohamedisak184"target="_blank"><i class="fab fa-twitter hover:text-[#4a90e2]"></i></a>  
+        <a href="https://mohamedisak73.blogspot.com/"target="_blank"><i class="fab fa-blogger hover:text-[#4a90e2]"></i></a>  
+        <a href="tel:+252612384373"target="_blank"><i class="fab fa-whatsapp hover:text-[#4a90e2]"></i></a>  
+      </div>  
+    </div>  
+  </nav>  
+    <hr>  
+    <div class="flex w-[1000px] justify-between mx-auto py-10 m-4  ">  
+      <h1 class="text-4xl font-bold">  
+        WELCOME TO <br>  
+        MY PERSONAL <br>  
+        WEBSITE <br> <br>  
+        <p class="text-sm">Waa mohamed soo dhawoow markale wanku faraxsanahay inaad isoo booqatay</p>  
+      </h1>  
+      <img class="h-80 rounded-t-full border boredr-grey border-10 " src="hero.jpg" alt="ero pic">  
+    </div>  
+  </header>     
+  <section >
+   <div class="max-w-7xl mx-auto px-6 py-16 ">
+   <div class="flex flex-col md:flex-row justify-center gap-20  mb-16">
+    <div class="flex items-center gap-4">
+     <div class="bg-[#1f222a] text-white rounded-full p-3 flex justify-center items-center w-10 h-10">
+      <i class="fas fa-map-marker-alt text-sm">
+      </i>
+     </div>
+     <div class="text-[12px] text-[#1f222a] font-light ">
+      <span class="font-semibold">
+       Locate me
+      </span>
+      <br/>
+      <span class="italic">
+       dharkenley, mogadishu, somalia
+      </span>
+     </div>
     </div>
-    <nav class="px-4">
-      <ul class="flex flex-wrap justify-center md:justify-start space-x-4 md:space-x-12 md:mx-60 items-center tracking-tight">
-        <li><a href="HOME.HTML" class="hover:text-blue-400">Home</a></li>
-        <li><a href="aboutme.html" class="hover:text-blue-400">About me</a></li>
-        <li><a href="jus.html" class="hover:text-blue-400">About JUS</a></li>
-        <li><a href="xaafadeyda.html" class="hover:text-blue-400">About Village</a></li>
-        <li><a href="contact.html" class="hover:text-blue-400">Contact</a></li>
-      </ul>
-      <div class="space-x-3 mb-4 mt-4 text-center md:text-right">
-        <a href="https://www.instagram.com/mohamed.isak___73?igsh=aHNxZWV2NjFveGxl" target="_blank"><i class="fab fa-instagram hover:text-[#4a90e2]"></i></a>
-        <a href="https://www.facebook.com/mohamed.isak.5055" target="_blank"><i class="fab fa-facebook hover:text-[#4a90e2]"></i></a>
-        <a href="https://x.com/mohamedisak184" target="_blank"><i class="fab fa-twitter hover:text-[#4a90e2]"></i></a>
-        <a href="https://mohamedisak73.blogspot.com/" target="_blank"><i class="fab fa-blogger hover:text-[#4a90e2]"></i></a>
-        <a href="tel:+252612384373" target="_blank"><i class="fab fa-whatsapp hover:text-[#4a90e2]"></i></a>
-      </div>
-    </nav>
-    <hr class="border-gray-600" />
-    <div class="flex flex-col md:flex-row items-center justify-between max-w-screen-xl mx-auto py-10 px-4">
-      <h1 class="text-3xl md:text-4xl font-bold mb-6 md:mb-0">
-        WELCOME TO <br />
-        MY PERSONAL <br />
-        WEBSITE <br /><br />
-        <p class="text-sm">Waa mohamed soo dhawoow markale wanku faraxsanahay inaad isoo booqatay</p>
-      </h1>
-      <img class="h-60 md:h-80 rounded-t-full border border-gray-400" src="hero.jpg" alt="hero pic" />
+    <div class="flex items-center gap-4">
+     <div class="bg-[#1f222a] text-white rounded-full p-3 flex justify-center items-center w-10 h-10">
+      <i class="fas fa-file-alt text-sm">
+      </i>
+     </div>
+     <div class="text-[12px] text-[#1f222a] font-light">
+      <span class="font-semibold">
+       Reservation
+      </span>
+      <br/>
+      <span class="italic">
+       mohamedisak184@gmail.com
+      </span>
+     </div>
     </div>
-  </header>
+   </div>
+   <div class="flex flex-col md:flex-row md:items-center md:gap-12">
+    <div class="flex-shrink-0">
+    </div>
+  <div class="mt-10 grid md:grid-cols-2 gap-6">  
+  <div class="flex justify-center space-x-3  mx-4 my-4">  
+    <img src="web.jpg" alt="Website Logo" class="h-60"></div>  
+    <div>  
+    <div class="mt-10 md:mt-0 border-t md:border-t-0 md:border-l border-[#1f222a] border-opacity-20 md:pl-10 pt-10 md:pt-0 text-[#1f222a] text-[12px] leading-tight"></div>
+    <h3 class="text-xl font-semibold mb-2">The Story of the website</h3>  
+    <p class="mb-2">Website-keyga waxaa ugu hadli rabaa xogo igu saabsan aniga,  jaamacadeyda iyo xaafadeyda</p>  
+    <div class="flex flex-col md:flex-row justify-around items-start space-y-6 md:space-y-0 md:space-x-12">  
+      <p class="mb-2">  
+      <strong>2025:</strong> “Bissmillah ,waligey waxaan <br> jeclaa inaa wab bage aan <br> leeyahay sameeysto”.  
+      </p>  
+      <p class="mb-2 ">  
+      <strong>2025:</strong> Bissmillah waa markii u horeysay aan <br> FIGMA wax ku design gareeyo, Maalmo badan <br> kadib waxaan rajeynaa inuu iihagaago website-kaan   
+       </p>  
+    </div> 
+  <!-- <div class="mt-10 grid md:grid-cols-2 gap-6 justify-items-center text-center">
+  <div class="w-72 flex justify-center">
+    <img src="web.jpg" alt="Website Logo" class="h-60">
+  </div>
+  <div class="max-w-md">
+    <h3 class="text-xl font-semibold mb-2">The Story of the website</h3>  
+    <p class="mb-2">Website-keyga waxaa ugu hadli rabaa xogo igu saabsan aniga, jaamacadeyda iyo xaafadeyda</p>  
+    <div class="flex flex-col md:flex-row justify-around items-start space-y-6 md:space-y-0 md:space-x-12">  
+      <p class="mb-2">  
+        <strong>2025:</strong> “Bissmillah ,waligey waxaan jeclaa inaa wab bage aan leeyahay sameeysto”.  
+      </p>  
+      <p class="mb-2">  
+        <strong>2025:</strong> Bissmillah waa markii u horeysay aan FIGMA wax ku design gareeyo, Maalmo badan kadib waxaan rajeynaa inuu iihagaago website-kaan   
+      </p>  
+    </div>   -->
+    <p class="mt-4 font-bold">MOHAMED ISAK</p>  
+    <img src="saxiix.jpg" alt="Logo" class="h-20 mb-4 md:mb-0" />  
+  </div>
+</div>
 
-  <section class="bg-gray-400 text-gray-900 p-6 md:p-10">
-    <div class="flex flex-col md:flex-row justify-around items-start space-y-6 md:space-y-0 md:space-x-12">
-      <div>
-        <h2 class="font-bold mb-2"><i class="fas fa-map-marker-alt mr-2"></i>Locate me</h2>
-        <p>dharkenley, mogadishu, somalia</p>
-      </div>
-
-      <div>
-        <h2 class="font-bold mb-2"><i class="fas fa-file-alt mr-2"></i>Reservation</h2>
-        <p>mohamedisak184@gmail.com</p>
-      </div>
-    </div>
-
-    <div class="mt-10 grid grid-cols-1 md:grid-cols-2 gap-6 items-center">
-      <div class="flex justify-center">
-        <img src="web.jpg" alt="Website Logo" class="h-60 w-auto" />
-      </div>
-      <div>
-        <h3 class="text-xl font-semibold mb-2">The Story of the website</h3>
-        <p class="mb-2">Website-keyga waxaa ugu hadli rabaa xogo igu saabsan aniga, jaamacadeyda iyo xaafadeyda</p>
-        <div class="space-y-4">
-          <p><strong>2025:</strong> “Bissmillah ,waligey waxaan jeclaa inaa wab bage aan leeyahay sameeysto”.</p>
-          <p><strong>2025:</strong> Bissmillah waa markii u horeysay aan FIGMA wax ku design gareeyo, Maalmo badan kadib waxaan rajeynaa inuu iihagaago website-kaan</p>
-        </div>
-        <p class="mt-4 font-bold">MOHAMED ISAK</p>
-        <img src="saxiix.jpg" alt="Logo" class="h-20 mt-2" />
-      </div>
-    </div>
-  </section>
-
-  <footer class="bg-gray-900 text-center text-gray-400 p-6 border-t border-gray-700">
-    <div class="flex justify-center mb-4">
-      <img src="logo.jpg" alt="Logo" class="h-10" />
-    </div>
-    <div class="mb-2">MOHAMED ISAK</div>
-    <div class="space-x-3 mb-2">
-      <a href="https://www.instagram.com/mohamed.isak___73?igsh=aHNxZWV2NjFveGxl" target="_blank"><i class="fab fa-instagram hover:text-[#4a90e2]"></i></a>
-      <a href="https://www.facebook.com/mohamed.isak.5055" target="_blank"><i class="fab fa-facebook hover:text-[#4a90e2]"></i></a>
-      <a href="https://x.com/mohamedisak184" target="_blank"><i class="fab fa-twitter hover:text-[#4a90e2]"></i></a>
-      <a href="https://mohamedisak73.blogspot.com/" target="_blank"><i class="fab fa-blogger hover:text-[#4a90e2]"></i></a>
-      <a href="tel:+252612384373" target="_blank"><i class="fab fa-whatsapp hover:text-[#4a90e2]"></i></a>
-    </div>
-    <div>&copy; Copyright - Mohamed's design | Designed by mohamed isak</div>
-  </footer>
-
-</body>
-</html>
+  </section>  
+    <!-- Footer -->  
+    <footer class="bg-gray-900 text-center text-gray-400 p-6 border-t border-gray-700 ">  
+    <div class="mx-[550px] h[100px] "><img src="logo.jpg" alt="Logo" class="h-10"></div>  
+    <div class="mb-2 text-left">MOHAMED ISAK</div>  
+      <div class="space-x-3 mb-2 text-right">  
+        <a href="https://www.instagram.com/mohamed.isak___73?igsh=aHNxZWV2NjFveGxl"target="_blank"><i class="fab fa-instagram  hover:text-[#4a90e2]"></i></a>  
+        <a href="https://www.facebook.com/mohamed.isak.5055"target="_blank"><i class="fab fa-facebook hover:text-[#4a90e2]"></i></a>  
+        <a href="https://x.com/mohamedisak184"target="_blank"><i class="fab fa-twitter hover:text-[#4a90e2]"></i></a>  
+        <a href="https://mohamedisak73.blogspot.com/"target="_blank"><i class="fab fa-blogger hover:text-[#4a90e2]"></i></a>  
+        <a href="tel:+252612384373"target="_blank"><i class="fab fa-whatsapp hover:text-[#4a90e2]"></i></a>  
+      </div>  
+    <div>&copy; Copyright - Mohamed's design | Designed by mohamed isak</div>  
+  </footer>  </body>  
+</html>                          
