--- a/HOME.HTML
+++ b/HOME.HTML
@@ -19,28 +19,29 @@
 </script>
 
 </head>  
-<body  class="bg-[#fff7f3]">  
+<body  class="bg-[#fff7f3] font-josephanslap">  
   <header class="bg-[#292E36] h-[500px] text-white font-josephanslap">  
     <div class="w-[1000px] mx-6   ">  
       <button class="border border-lime-400 text-white px-4 py-1 text-sm mb-4 md:mb-0 flex justify-around ">Mohamed's design</button>  
-    </div>  
-    <nav class="text-bottom">  
-      <ul class="flex space-x-12 mx-60 items-center tracking-tight">  
-        <li><a href="HOME.HTML"class="hover:text-blue-400">Home</a></li>  
-        <li><a href="aboutme.html"class="hover:text-blue-400">About me</a></li>  
-        <li><a href="jus.html"class="hover:text-blue-400">About JUS</a></li>  
-        <li><a href="xaafadeyda.html"class="hover:text-blue-400">About Village</a></li>  
-        <li><a href="contact.html"class="hover:text-blue-400">Contact</a></li>  
-      </ul>  
-      <div class="space-x-3 mb-2 text-right">  
-        <a href="https://www.instagram.com/mohamed.isak___73?igsh=aHNxZWV2NjFveGxl"target="_blank"><i class="fab fa-instagram  hover:text-[#4a90e2]"></i></a>  
-        <a href="https://www.facebook.com/mohamed.isak.5055"target="_blank"><i class="fab fa-facebook hover:text-[#4a90e2]"></i></a>  
-        <a href="https://x.com/mohamedisak184"target="_blank"><i class="fab fa-twitter hover:text-[#4a90e2]"></i></a>  
-        <a href="https://mohamedisak73.blogspot.com/"target="_blank"><i class="fab fa-blogger hover:text-[#4a90e2]"></i></a>  
-        <a href="tel:+252612384373"target="_blank"><i class="fab fa-whatsapp hover:text-[#4a90e2]"></i></a>  
-      </div>  
-    </div>  
-  </nav>  
+    </div>
+<nav class="text-bottom">
+  <ul class="flex flex-wrap justify-center space-x-6 md:space-x-12 mx-4 md:mx-60 items-center tracking-tight">
+    <li><a href="HOME.HTML" class="hover:text-blue-400 whitespace-nowrap">Home</a></li>
+    <li><a href="aboutme.html" class="hover:text-blue-400 whitespace-nowrap">About me</a></li>
+    <li><a href="jus.html" class="hover:text-blue-400 whitespace-nowrap">About JUS</a></li>
+    <li><a href="xaafadeyda.html" class="hover:text-blue-400 whitespace-nowrap">About Village</a></li>
+    <li><a href="contact.html" class="hover:text-blue-400 whitespace-nowrap">Contact</a></li>
+  </ul>
+  <div class="space-x-3 mb-2 text-right px-4    md:px-100">
+    <a href="https://www.instagram.com/mohamed.isak___73?igsh=aHNxZWV2NjFveGxl" target="_blank"><i class="fab fa-instagram hover:text-[#4a90e2]"></i></a>
+    <a href="https://www.facebook.com/mohamed.isak.5055" target="_blank"><i class="fab fa-facebook hover:text-[#4a90e2]"></i></a>
+    <a href="https://x.com/mohamedisak184" target="_blank"><i class="fab fa-twitter hover:text-[#4a90e2]"></i></a>
+    <a href="https://mohamedisak73.blogspot.com/" target="_blank"><i class="fab fa-blogger hover:text-[#4a90e2]"></i></a>
+    <a href="tel:+252612384373" target="_blank"><i class="fab fa-whatsapp hover:text-[#4a90e2]"></i></a>
+  </div>
+</nav>
+  
+ 
     <hr>  
     <div class="flex w-[1000px] justify-between mx-auto py-10 m-4  ">  
       <h1 class="text-4xl font-bold">  
