--- a/xaafadeyda.html
+++ b/xaafadeyda.html
@@ -84,9 +84,9 @@
 
     <div class="text-center mb-12">
       <h3 class="uppercase text-sm text-gray-400 mb-1 border-b border-t border-yellow-400 inline-block pb-1 pt-1 tracking-widest">goobaha</h3>
-      <h3 class="text-xl font-semibold mb-2 px-6 text-center">Goobaha caanka ah</h3>
+      <h3 class="text-xl font-semibold mb-2 px-6 text-center">Goobaha <br> caanka ah</h3>
       <p class="text-gray-700">
-        Xaafadeena waxy lee dahay goobo isugu jira kuwo qadiimi ah sida iskuulada dowlada.iyo kuwo hada ah, goobaha ugu muhiimsan waxaa ka mid ah
+        Xaafadeena waxy lee dahay goobo isugu jira kuwo qadiimi ah sida iskuulada <br> dowlada. <br> iyo kuwo hada ah, goobaha ugu muhiimsan waxaa ka mid ah
       </p>
     </div>
 
